Revert "PRL-4518:Fixed sonar issue"
This reverts commit cd3e6fc8b8a42330927070696352780eda8d3798.