@@ -34,6 +34,7 @@ import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 import static javax.ws.rs.core.MediaType.APPLICATION_JSON;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.INVALID_CLIENT;
@@ -90,7 +91,7 @@ public class FL401SubmitApplicationController {
             caseDataUpdated.put("submitCountyCourtSelection", DynamicList.builder()
                 .listItems(locationRefDataService.getDaCourtLocations(authorisation).stream()
                                .sorted(Comparator.comparing(m -> m.getLabel(), Comparator.naturalOrder()))
-                               .toList())
+                               .collect(Collectors.toList()))
                 .build());
 
             return AboutToStartOrSubmitCallbackResponse.builder()
