@@ -81,10 +81,10 @@ public class CaseDataMiamElementsMapper {
         miamNotAttendingReasons.remove("canNotAccessMediator");
 
         List<String> mediatorList = Stream.of(miamNotAttendingReasons, noMediatorAccessSubfields)
-                .flatMap(Collection::stream).toList();
+                .flatMap(Collection::stream).collect(Collectors.toList());
 
         return mediatorList.stream().map(value -> MiamNotAttendingReasonsMapperEnum.valueOf(value).getValue())
-                .toList();
+                .collect(Collectors.toList());
     }
 
     private static List<MiamPreviousAttendanceChecklistEnum> buildMiamPreviousAttendanceChecklist(C100RebuildMiamElements c100RebuildMiamElements) {
@@ -95,7 +95,7 @@ public class CaseDataMiamElementsMapper {
             return Collections.emptyList();
         }
         return previousAttendance.stream().map(value -> MiamPreviousAttendanceMapperEnum.valueOf(value).getValue())
-                .toList().stream().distinct().toList();
+                .collect(Collectors.toList()).stream().distinct().collect(Collectors.toList());
 
     }
 
@@ -107,7 +107,7 @@ public class CaseDataMiamElementsMapper {
             return Collections.emptyList();
         }
         return miamUrgencies.stream().map(value -> MiamUrgencyMapperEnum.valueOf(value).getValue())
-                .toList().stream().distinct().toList();
+                .collect(Collectors.toList()).stream().distinct().collect(Collectors.toList());
     }
 
     private static List<MiamChildProtectionConcernChecklistEnum>
@@ -119,7 +119,7 @@ public class CaseDataMiamElementsMapper {
             return Collections.emptyList();
         }
         return childProtectionEvidences.stream().map(value -> ChildProtectionMapperEnum.valueOf(value).getValue())
-                .toList();
+                .collect(Collectors.toList());
     }
 
     private static List<MiamDomesticViolenceChecklistEnum> buildMiamDomesticViolenceChecklist(C100RebuildMiamElements
@@ -158,7 +158,7 @@ public class CaseDataMiamElementsMapper {
         }
 
         return domesticAbusesList.stream().map(value -> DomesticAbuseMapperEnum.valueOf(value).getValue())
-                .toList();
+                .collect(Collectors.toList());
     }
 
     private static List<MiamExemptionsChecklistEnum> buildMiamExemptionsCheckList(C100RebuildMiamElements c100RebuildMiamElements) {
@@ -169,7 +169,7 @@ public class CaseDataMiamElementsMapper {
             return Collections.emptyList();
         }
         return nonAttendanceReasons.stream().map(value -> MiamExemptionMapperEnum.valueOf(value).getValue())
-                .toList();
+                .collect(Collectors.toList());
     }
 
     private static Document buildDocument(uk.gov.hmcts.reform.prl.models.c100rebuild.Document maimDocument) {
