@@ -13,6 +13,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.concurrent.atomic.AtomicInteger;
+import java.util.stream.Collectors;
 import javax.json.JsonArray;
 import javax.json.JsonObject;
 import javax.json.JsonValue;
@@ -34,7 +35,7 @@ public class ApplicantsMapper {
         }
         List<PartyDetails> applicantList = applicants.stream()
             .map(Element::getValue)
-            .toList();
+            .collect(Collectors.toList());
         AtomicInteger counter = new AtomicInteger(1);
         return applicantList.stream().map(applicant -> getApplicant(counter, applicant, applicantSolicitorMap)).collect(
             JsonCollectors.toJsonArray());
