@@ -10,6 +10,7 @@ import uk.gov.hmcts.reform.prl.utils.CommonUtils;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 import javax.json.JsonArray;
 import javax.json.JsonValue;
 import javax.json.stream.JsonCollectors;
@@ -29,7 +30,7 @@ public class OtherPeopleInTheCaseRevisedMapper {
         }
         List<PartyDetails> otherPeopleInTheCaseList = otherPeopleInTheCase.stream()
             .map(Element::getValue)
-            .toList();
+            .collect(Collectors.toList());
         return otherPeopleInTheCaseList.stream().map(otherPeople -> new NullAwareJsonObjectBuilder()
             .add("firstName", otherPeople.getFirstName())
             .add("lastName", otherPeople.getLastName())
