@@ -29,6 +29,7 @@ import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.TASK_LIST_VERSION_V2;
 
@@ -72,11 +73,11 @@ public class CaseWorkerEmailService {
             .getApplicants()
             .stream()
             .map(Element::getValue)
-            .toList();
+            .collect(Collectors.toList());
 
         List<String> applicantNamesList = applicants.stream()
             .map(element -> element.getFirstName() + " " + element.getLastName())
-            .toList();
+            .collect(Collectors.toList());
 
         final String applicantNames = String.join(", ", applicantNamesList);
 
@@ -84,11 +85,11 @@ public class CaseWorkerEmailService {
             .getRespondents()
             .stream()
             .map(Element::getValue)
-            .toList();
+            .collect(Collectors.toList());
 
         List<String> respondentsList = respondents.stream()
             .map(PartyDetails::getLastName)
-            .toList();
+            .collect(Collectors.toList());
 
         final String respondentNames = String.join(", ", respondentsList);
 
@@ -177,11 +178,11 @@ public class CaseWorkerEmailService {
                 .getApplicants()
                 .stream()
                 .map(Element::getValue)
-                .toList();
+                .collect(Collectors.toList());
 
             List<String> applicantEmailList = applicants.stream()
                 .map(PartyDetails::getSolicitorEmail)
-                .toList();
+                .collect(Collectors.toList());
 
             email = applicantEmailList.get(0);
 
@@ -230,11 +231,11 @@ public class CaseWorkerEmailService {
             .getGatekeeper()
             .stream()
             .map(Element::getValue)
-            .toList();
+            .collect(Collectors.toList());
 
         List<String> emailList = gatekeeperEmails.stream()
             .map(GatekeeperEmail::getEmail)
-            .toList();
+            .collect(Collectors.toList());
 
         emailList.forEach(email ->   emailService.send(
             email,
@@ -279,11 +280,11 @@ public class CaseWorkerEmailService {
             .getLocalCourtAdmin()
             .stream()
             .map(Element::getValue)
-            .toList();
+            .collect(Collectors.toList());
 
         List<String> emailList = localCourtAdminEmails.stream()
             .map(LocalCourtAdminEmail::getEmail)
-            .toList();
+            .collect(Collectors.toList());
         emailList.forEach(email -> {
             if (null != email) {
                 emailService.send(
@@ -304,13 +305,13 @@ public class CaseWorkerEmailService {
             .getApplicants()
             .stream()
             .map(Element::getValue)
-            .toList();
+            .collect(Collectors.toList());
 
         List<YesOrNo> emailAddressInfo = applicants.stream()
             .filter(eachParty -> null != eachParty.getIsEmailAddressConfidential()
                 && YesOrNo.Yes.equals(eachParty.getIsEmailAddressConfidential()))
             .map(PartyDetails::getIsEmailAddressConfidential)
-            .toList();
+            .collect(Collectors.toList());
 
         String isConfidential = NO;
         if (emailAddressInfo.contains(YesOrNo.Yes)
