@@ -24,6 +24,7 @@ import uk.gov.hmcts.reform.prl.models.dto.ccd.CaseData;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 import static java.util.Objects.nonNull;
 import static java.util.Optional.ofNullable;
@@ -196,7 +197,7 @@ public class CourtFinderService {
         return c.getPersonWhoLivesWithChild()
             .stream()
             .map(Element::getValue)
-            .toList()
+            .collect(Collectors.toList())
             .get(0);
 
     }
