@@ -21,6 +21,7 @@ import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.EMPTY_STRING;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.LISTED;
@@ -65,8 +66,8 @@ public class HearingService {
                 }
 
                 List<CaseHearing> sortedByLatest = hearings.getCaseHearings().stream()
-                    .sorted(Comparator.comparing(CaseHearing::getNextHearingDate, Comparator.nullsLast(Comparator.naturalOrder())))
-                    .toList();
+                    .sorted(Comparator.comparing(CaseHearing::getNextHearingDate, Comparator.nullsLast(Comparator.naturalOrder()))).collect(
+                        Collectors.toList());
 
                 hearings.setCaseHearings(sortedByLatest);
             }
@@ -132,7 +133,7 @@ public class HearingService {
 
         LocalDateTime urgencyLimitDate = LocalDateTime.now().plusDays(5).plusMinutes(1).withNano(1);
         final List<String> hearingStatuses =
-            futureHearingStatusList.stream().map(String::trim).toList();
+            futureHearingStatusList.stream().map(String::trim).collect(Collectors.toList());
 
         boolean isInFutureHearingStatusList = hearingStatuses.stream()
             .anyMatch(
@@ -155,7 +156,7 @@ public class HearingService {
                             .isBefore(
                                 urgencyLimitDate)
             )
-            .toList()
+            .collect(Collectors.toList())
             .size() > 0;
 
     }
