@@ -17,6 +17,7 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 import static java.util.Optional.ofNullable;
 import static uk.gov.hmcts.reform.prl.enums.Event.CHILD_DETAILS;
@@ -40,7 +41,7 @@ public class ChildChecker implements EventChecker {
             List<Child> children = childrenWrapped.get()
                 .stream()
                 .map(Element::getValue)
-                .toList();
+                .collect(Collectors.toList());
 
             for (Child c : children) {
                 if (!(validateMandatoryFieldsCompleted(c)) || !(validateAdditionalFieldsCompleted(caseData))) {
@@ -67,7 +68,7 @@ public class ChildChecker implements EventChecker {
             List<Child> children = childrenWrapped.get()
                 .stream()
                 .map(Element::getValue)
-                .toList();
+                .collect(Collectors.toList());
 
             for (Child c : children) {
                 if (validateAnyFieldStarted(c)) {
