@@ -14,6 +14,7 @@ import uk.gov.hmcts.reform.prl.services.TaskErrorService;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 import static java.util.Optional.ofNullable;
 import static uk.gov.hmcts.reform.prl.enums.Event.CHILD_DETAILS_REVISED;
@@ -37,7 +38,7 @@ public class ChildDetailsRevisedChecker implements EventChecker {
             List<ChildDetailsRevised> children = childrenWrapped.get()
                 .stream()
                 .map(Element::getValue)
-                .toList();
+                .collect(Collectors.toList());
 
             for (ChildDetailsRevised c : children) {
                 log.debug("validateMandatoryFieldsCompleted  :{} ",validateMandatoryFieldsCompleted(c));
@@ -66,7 +67,7 @@ public class ChildDetailsRevisedChecker implements EventChecker {
             List<ChildDetailsRevised> children = childrenWrapped.get()
                 .stream()
                 .map(Element::getValue)
-                .toList();
+                .collect(Collectors.toList());
 
             for (ChildDetailsRevised c : children) {
                 if (validateAnyFieldStarted(c)) {
