@@ -14,6 +14,7 @@ import uk.gov.hmcts.reform.prl.services.TaskErrorService;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 import static java.util.Optional.ofNullable;
 import static uk.gov.hmcts.reform.prl.enums.Event.OTHER_CHILDREN_NOT_PART_OF_THE_APPLICATION;
@@ -50,7 +51,7 @@ public class OtherChildrenNotPartOfTheApplicationChecker implements EventChecker
             List<OtherChildrenNotInTheCase> children = childrenWrapped.get()
                 .stream()
                 .map(Element::getValue)
-                .toList();
+                .collect(Collectors.toList());
             for (OtherChildrenNotInTheCase c : children) {
                 log.debug("validateOtherChildrenNotInTheCase - validateMandatoryFieldsCompleted :{} ",validateMandatoryFieldsCompleted(c));
                 if (!(validateMandatoryFieldsCompleted(c))) {
