@@ -12,6 +12,7 @@ import uk.gov.hmcts.reform.prl.services.TaskErrorService;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 import static java.util.Optional.ofNullable;
 import static uk.gov.hmcts.reform.prl.enums.Event.OTHER_PROCEEDINGS;
@@ -45,7 +46,7 @@ public class OtherProceedingsChecker implements EventChecker {
             List<ProceedingDetails> allProceedings = proceedingDetails.get()
                 .stream()
                 .map(Element::getValue)
-                .toList();
+                .collect(Collectors.toList());
 
             //if a collection item is added and then removed the collection exists as length 0
             if (allProceedings.isEmpty()) {
