@@ -133,7 +133,7 @@ public class SendgridServiceTest {
         EmailNotificationDetails emailNotificationDetails = EmailNotificationDetails.builder()
             .emailAddress("test@email.com")
             .servedParty(SERVED_PARTY_APPLICANT_SOLICITOR)
-            .docs(documentList.stream().map(s -> element(s)).toList())
+            .docs(documentList.stream().map(s -> element(s)).collect(Collectors.toList()))
             .attachedDocs(String.join(",", documentList.stream().map(a -> a.getDocumentFileName()).collect(
                 Collectors.toList())))
             .timeStamp(currentDate).build();
@@ -224,7 +224,7 @@ public class SendgridServiceTest {
         EmailNotificationDetails emailNotificationDetails = EmailNotificationDetails.builder()
                 .emailAddress("test@email.com")
                 .servedParty(SERVED_PARTY_APPLICANT_SOLICITOR)
-                .docs(documentList.stream().map(s -> element(s)).toList())
+                .docs(documentList.stream().map(s -> element(s)).collect(Collectors.toList()))
                 .attachedDocs(String.join(",", documentList.stream().map(a -> a.getDocumentFileName()).collect(
                         Collectors.toList())))
                 .timeStamp(currentDate).build();
@@ -316,7 +316,7 @@ public class SendgridServiceTest {
         EmailNotificationDetails emailNotificationDetails = EmailNotificationDetails.builder()
                 .emailAddress("test@email.com")
                 .servedParty(SERVED_PARTY_APPLICANT_SOLICITOR)
-                .docs(documentList.stream().map(s -> element(s)).toList())
+                .docs(documentList.stream().map(s -> element(s)).collect(Collectors.toList()))
                 .attachedDocs(String.join(",", documentList.stream().map(a -> a.getDocumentFileName()).collect(
                         Collectors.toList())))
                 .timeStamp(currentDate).build();
@@ -406,7 +406,7 @@ public class SendgridServiceTest {
         EmailNotificationDetails emailNotificationDetails = EmailNotificationDetails.builder()
             .emailAddress("test@email.com")
             .servedParty(SERVED_PARTY_APPLICANT_SOLICITOR)
-            .docs(documentList.stream().map(s -> element(s)).toList())
+            .docs(documentList.stream().map(s -> element(s)).collect(Collectors.toList()))
             .attachedDocs(String.join(",", documentList.stream().map(a -> a.getDocumentFileName()).collect(
                 Collectors.toList())))
             .timeStamp(currentDate).build();
